@@ -3,3 +3,4 @@
 #import <BookmarkKit/BKBookmarkStore.h>
 #import <BookmarkKit/BKBookmarkQuery.h>
 #import <BookmarkKit/BKBookmarkSearchResult.h>
+#import <BookmarkKit/BKBookmarkView.h>
