@@ -1,3 +1,7 @@
+2006-10-23  Yen-Ju Chen <yjchen at gmail>
+
+    * Add BKBookmarkView.
+
 2006-10-18  Yen-Ju Chen <yjchen at gmail>
 
     * Implement last visited date.
